fixed layout issue

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -26,10 +26,24 @@ body {
  */
 
  main {
-  position: relative;
-  margin: 0px auto;
+  margin: auto;
+  position: absolute;
   padding-top: 100px;
-  width: 750px;
-  height: 2000px;
+  width: 450px;
+  background-color: white; 
+  right: 0px;
+  left: 0px;
+ }
+
+
+ hi {
+  width: 450px;
   background-color: white;
+  margin: auto;
+  text-align: center;
+  position: absolute;
+  right: 0px;
+  left: 0px;
+  padding-top: 80px;
+  padding-bottom: 30px; 
  }
