--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -11,9 +11,17 @@
 
 }   
 
-#nav-bar .logo {
+#tweeter-logo {
     float: left;
     width: 80px;
+    height: 80px;
+}
+
+#compose {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    float: right;
+    width: 95px;
     height: 80px;
 }
 
