--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,4 +1,4 @@
-.new-tweet {
+#new-tweet-container {
     position: relative;
     background-color: #eee;
     border-radius: 10px;
@@ -6,14 +6,14 @@
     height: 190px;
 }
 
-section h2 {
+#new-tweet-container h2 {
     border-bottom: 2px solid black;
     margin: 10px 10px;
     padding: 10px 0 10px 0;
 }
 
-section form textarea {
-    width: 660px;   
+#new-tweet-container textarea {
+    width: 365px;   
     margin-top: 10px;
     margin-left: 10px;
     height: 55px;
