--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -1,13 +1,16 @@
-.tweets {
+.tweeted {
     
     background-color: #eee;
     border-radius: 10px;
     margin: 5px 2em 30px 2em;
     height: 300px;
     border: 2px solid black;
-    opacity: 0.1;
+    opacity: 0.5;
 }
 
+article {
+    margin-bottom: 25px;
+}
 
 article .logo {
     float: left;
@@ -65,7 +68,7 @@ article header {
     
 }
 
-.tweets:hover{
+.tweeted:hover{
     opacity: 1;
 }
 
@@ -78,6 +81,6 @@ article header {
 }
 
 
-.tweets:hover .heart {
+.tweeted:hover .heart {
     display: inline;
 }
